--- a/StatTracker.html
+++ b/StatTracker.html
@@ -4,9 +4,8 @@
 	jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="Element.css">
 </HEAD>
-
+// using jquery
 <HTML>
-
 
 	
 <TITLE>Stat Tracker</TITLE>
